--- a/ex05/index.html
+++ b/ex05/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>SAVR v0</title>
+    <title>Browser based Inference</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
